TestRepo2/src/objects/User_Address_Book__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>User Address Book</label>
    <nameField>
        <label>User_address_book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User_Address_Book</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>